add flags to focus controller

--- a/Loenn/lang/en_gb.lang
+++ b/Loenn/lang/en_gb.lang
@@ -272,6 +272,7 @@ entities.Microlith57Misc/FocusController.placements.name.focusController=Focus C
 entities.Microlith57Misc/FocusController.attributes.description.enabledFlag=If present, only allow focusing when the flag is set.
 entities.Microlith57Misc/FocusController.attributes.description.activeFlag=If possible, focus whenever this flag is set.
 entities.Microlith57Misc/FocusController.attributes.description.slider=Name of the slider to set based on the focus amount, in [0-1] where 0 represents normal and 1 represents fully focused.
+entities.Microlith57Misc/FocusController.attributes.description.flagPrefix=If present, used as a prefix to generate "Trying" / "Focusing" / "AnyFocus" / "FullFocus" flags.
 entities.Microlith57Misc/FocusController.attributes.description.consumptionResourceName=If present, link to the consumption resource with this name.
 entities.Microlith57Misc/FocusController.attributes.description.consumptionRate=How fast (units/sec) to consume the linked resource.
 entities.Microlith57Misc/FocusController.attributes.description.unfocusWhenResourceLow=If true, gradually unfocus when the resource is running low.
@@ -281,6 +282,7 @@ entities.Microlith57Misc/FocusController.attributes.description.useRawDeltaTime=
 entities.Microlith57Misc/FocusController_Button.placements.name.focusController=Focus Controller (Button)
 entities.Microlith57Misc/FocusController_Button.attributes.description.enabledFlag=If present, only allow focusing when the flag is set.
 entities.Microlith57Misc/FocusController_Button.attributes.description.slider=Name of the slider to set based on the focus amount, in [0-1] where 0 represents normal and 1 represents fully focused.
+entities.Microlith57Misc/FocusController_Button.attributes.description.flagPrefix=If present, used as a prefix to generate "Trying" / "Focusing" / "AnyFocus" / "FullFocus" flags.
 entities.Microlith57Misc/FocusController_Button.attributes.description.consumptionResourceName=If present, link to the Consumable Resource entity with this name.
 entities.Microlith57Misc/FocusController_Button.attributes.description.consumptionRate=How fast (units/sec) to consume the linked resource.
 entities.Microlith57Misc/FocusController_Button.attributes.description.unfocusWhenResourceLow=If true, gradually unfocus when the resource is running low.
@@ -291,6 +293,7 @@ entities.Microlith57Misc/FocusController_Expression.placements.name.focusControl
 entities.Microlith57Misc/FocusController_Expression.attributes.description.enabledExpression=If present, only allow focusing when the expression is truthy.
 entities.Microlith57Misc/FocusController_Expression.attributes.description.activeExpression=If possible, focus whenever this expression is truthy.
 entities.Microlith57Misc/FocusController_Expression.attributes.description.slider=Name of the slider to set based on the focus amount, in [0-1] where 0 represents normal and 1 represents fully focused.
+entities.Microlith57Misc/FocusController_Expression.attributes.description.flagPrefix=If present, used as a prefix to generate "Trying" / "Focusing" / "AnyFocus" / "FullFocus" flags.
 entities.Microlith57Misc/FocusController_Expression.attributes.description.consumptionResourceName=If present, link to the consumption resource with this name.
 entities.Microlith57Misc/FocusController_Expression.attributes.description.consumptionRate=How fast (units/sec) to consume the linked resource.
 entities.Microlith57Misc/FocusController_Expression.attributes.description.unfocusWhenResourceLow=If true, gradually unfocus when the resource is running low.
